2004-11-15  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_proc_changed):
	return early if gimp_file_proc_view_get_proc() didn't return a file
	procedure. Should fix bug #158369.

2004-11-15  Øyvind Kolås  <pippin@gimp.org>

	* docs/gimp.txt: removed, outdated.
	* docs/make_todo: removed, unused.

2004-11-15  Sven Neumann  <sven@gimp.org>

	* app/dialogs/print-size-dialog.c: started to redo this dialog
	without using a GimpSizeBox. The widgets aren't connected, so it
	isn't usable yet.
	
	* app/widgets/gimpprogressbox.c
	* app/widgets/gimpprogressdialog.c
	* app/widgets/gimpsizebox.c: trivial cleanups.

	* data/images/gimp-splash.png: splash for 2.2-pre2, done by Jimmac.

2004-11-14  Sven Neumann  <sven@gimp.org>

	* app/actions/image-commands.c: converted error messages that should
	never appear to warnings.

2004-11-14  DindinX  <dindinx@gimp.org>

	* plug-ins/gfig/gfig-dialog.c
	* plug-ins/gfig/gfig-dobject.c
	* plug-ins/gfig/gfig-dobject.h: fixed a crash (the one triggered by
	this sequence: draw a line, delete it, redraw something), and
	corected some ui spacing.

2004-11-14  Sven Neumann  <sven@gimp.org>

	* app/core/gimppalette-import.c: applied a (slightly modified)
	patch from Nickolay V. Shmyrev that changes the palette import
	function to not only read palettes in the RIFF format but also
	GIMP and Photoshop ACT palette files (bug #158297).

2004-11-14  Sven Neumann  <sven@gimp.org>

	* Makefile.am (EXTRA_DIST)
	* MAINTAINERS
	* PLUGIN_MAINTAINERS
	* TODO.xml: removed these files from the tarball and from CVS.
	Doesn't make sense to keep unmaintained files around that provide
	outdated and in large parts wrong information.

2004-11-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/gfig/gfig-dialog.c (load_button_callback): use the
	proper parent widget.

2004-11-14  DindinX  <dindinx@gimp.org>

	* plug-ins/gfig/gfig-dialog.c
	* plug-ins/gfig/gfig-types.h: small UI tweaks, suggested by Sven.
